--- a/.pubignore
+++ b/.pubignore
@@ -1,1 +1,20 @@
- 
+.dart_tool/
+.git/
+.vscode/
+.cursor/
+.idea/
+.github/
+build/
+android/
+ios/
+web/
+windows/
+macos/
+linux/
+*.mp3
+*.iml
+*.log
+.flutter-plugins
+.flutter-plugins-dependencies
+.metadata
+pubspec.lock 
