--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.3.2
   path: ^1.8.3
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
