--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   shared_preferences: ^2.2.2
   dio: ^5.3.2
   path: ^1.8.3
-  file_picker: ^10.1.7
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +28,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/audio_file.mp3
