--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: gladia
 description: A Flutter SDK for the Gladia API for audio transcription, translation, and analysis
-version: 0.1.7
+version: 0.1.8
 repository: https://github.com/xdevspo/flutter-gladia
 homepage: https://gladia.io
 documentation: https://docs.gladia.io
@@ -18,12 +18,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.0.0
-  http_parser: ^4.0.2
-  meta: ^1.9.1
+  dio: ^5.8.0+1
+  http_parser: ^4.1.2
+  meta: ^1.16.0
   json_annotation: ^4.9.0
-  web_socket_channel: ^2.4.0
-  path: ^1.8.3
+  web_socket_channel: ^3.0.3
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
